--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,7 @@ plugins {
     id("org.jetbrains.kotlin.android") version "1.8.10" apply false
     id("com.android.library") version "8.1.0" apply false
 }
+apply from: this.rootProject.file('config.gradle')
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
