--- a/mod_main/src/main/java/com/example/mod_main/module/AndroidManifest.xml
+++ b/mod_main/src/main/java/com/example/mod_main/module/AndroidManifest.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <application
-        android:name="com.example.wanandroidyj.YjApplication"
+        android:name="com.example.mod_main.application.MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/mod_main_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WanAndroidYj"
         tools:replace="android:name,android:label,android:icon, android:theme,android:allowBackup">
+        <activity android:name="com.example.mod_main.MainActivity" android:exported="true" android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
     </application>
-
 </manifest>
