--- a/lib_network/build.gradle
+++ b/lib_network/build.gradle
@@ -44,12 +44,17 @@ dependencies {
     implementation rootProject.depsLibs.coreKtx
     implementation rootProject.depsLibs.appcompat
     implementation rootProject.depsLibs.material
-    implementation rootProject.depsLibs.constraintlayout
 
-    implementation rootProject.depsLibs.refreshLayout
-    implementation rootProject.depsLibs.refreshHeader
-    implementation rootProject.depsLibs.refreshFooter
+    implementation rootProject.depsLibs.retrofit2
+    implementation rootProject.depsLibs.retrofit2Gson
+    implementation rootProject.depsLibs.loggingInterceptor
 
-    implementation rootProject.depsLibs.aroutreApi
-    kapt rootProject.depsLibs.arouterCompiler
+    implementation rootProject.depsLibs.mmkv
+
+    implementation rootProject.depsLibs.gson
+    implementation rootProject.depsLibs.liveDataKtx
+    implementation rootProject.depsLibs.viewModelKtx
+
+    implementation project(path: ':lib_framework')
+    implementation project(path: ':lib_common')
 }
