--- a/lib_framework/build.gradle
+++ b/lib_framework/build.gradle
@@ -25,6 +25,7 @@ android {
     }
 
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -36,20 +37,21 @@ android {
     }
     kotlinOptions {
         jvmTarget = '17'
-    }}
+    }
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.depsLibs.coreKtx
     implementation rootProject.depsLibs.appcompat
     implementation rootProject.depsLibs.material
-    implementation rootProject.depsLibs.constraintlayout
+    implementation rootProject.depsLibs.gson
 
     implementation rootProject.depsLibs.refreshLayout
-    implementation rootProject.depsLibs.refreshHeader
-    implementation rootProject.depsLibs.refreshFooter
-
-    implementation rootProject.depsLibs.aroutreApi
-    kapt rootProject.depsLibs.arouterCompiler
+    implementation rootProject.depsLibs.tbssdk
 
 }
