--- a/mod_main/build.gradle
+++ b/mod_main/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.library'
+//    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
@@ -66,6 +66,7 @@ dependencies {
 //    implementation 'com.google.android.material:material:1.9.0'
 //    implementation  'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation fileTree(dir: 'libs', includes: ['*.jar'])
+    implementation 'io.github.youth5201314:banner:2.2.2'
     implementation rootProject.depsLibs.coreKtx
     implementation rootProject.depsLibs.appcompat
     implementation rootProject.depsLibs.material
