--- a/mod_main/src/main/java/com/example/mod_main/module/AndroidManifest.xml
+++ b/mod_main/src/main/java/com/example/mod_main/module/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/mod_main_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WanAndroidYj"
+        android:theme="@style/AppTheme"
         tools:replace="android:name,android:label,android:icon, android:theme,android:allowBackup">
         <activity android:name="com.example.mod_main.MainActivity" android:exported="true" android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
