--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,14 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
         maven { url 'https://jitpack.io' }
+        maven {
+            allowInsecureProtocol = true
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            allowInsecureProtocol = true
+            url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
+        }
 
     }
 }
@@ -13,7 +21,14 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-
+        maven {
+            allowInsecureProtocol = true
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            allowInsecureProtocol = true
+            url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
+        }
     }
 }
 
@@ -24,3 +39,4 @@ include(":lib_framework")
 include(":lib_network")
 include(":lib_build")
 include ':mod_main'
+include ':dushProgressBar'
