--- a/mod_video/build.gradle
+++ b/mod_video/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     implementation project(path: ':lib_framework')
     implementation project(path: ':lib_common')
     implementation project(path: ':lib_network')
-//    implementation project(path: ':lib_room')
+    implementation project(path: ':lib_room')
 }
